[package]
name = "fe-qe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fe-common = { path = "../fe-common" }
fe-catalog = { path = "../fe-catalog" }
fe-analysis = { path = "../fe-analysis" }
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlparser = "0.49"
