# Apache Doris - Backend Utility Library
# Licensed to the Apache Software Foundation (ASF)
#
# This library contains utility functions for:
# - CPU/memory introspection
# - Compression/encoding
# - Networking utilities
# - Data structures and algorithms
# - Performance profiling
#
# LAYERED ARCHITECTURE (to break circular dependencies):
# - foundation: No BE dependencies (only third-party libs)
# - core: Depends on foundation + common/foundation + common/core
# - util: Top-level target (backward compatibility)

package(default_visibility = ["//be:__subpackages__"])

# Foundation layer: Low-level utilities with NO dependencies on other BE libraries
# These can be used by common/core and other foundation layers
cc_library(
    name = "foundation",
    hdrs = [
        "alignment.h",        # Memory alignment macros (no deps)
        "asan_util.h",        # ASAN utilities (sanitizer lib only)
    ],
    copts = [
        "-std=c++17",
    ],
    includes = [
        ".",
        "..",  # for be/src includes
    ],
    # Only third-party dependencies, NO BE libraries
    deps = [],
    visibility = ["//visibility:public"],
)

# Core layer: Main utility functionality
# Depends on: foundation, common/foundation, common/core, third-party
cc_library(
    name = "core",
    srcs = glob(
        [
            "*.cpp",
        ],
        exclude = [
            "*_test.cpp",
            "*_benchmark.cpp",
            # Subdirectories handled separately
            "arrow/*.cpp",
            "hash/*.cpp",
            "debug/*.cpp",
            "mustache/*.cpp",
            "simd/*.cpp",
        ],
    ),
    hdrs = glob(
        [
            "*.h",
            "*.hpp",
        ],
        exclude = [
            # Foundation headers (listed above)
            "alignment.h",
            "asan_util.h",
            # Subdirectories handled separately
            "arrow/*.h",
            "hash/*.h",
            "debug/*.h",
            "mustache/*.h",
            "simd/*.h",
        ],
    ),
    copts = [
        "-std=c++17",
    ],
    includes = [
        ".",
        "..",  # for be/src includes
    ],
    deps = [
        ":foundation",  # Our foundation layer
        "//be/src/common:foundation",  # Depends on common foundation
        "//be/src/common:core",  # Depends on common core
        "//bazel/third_party:gflags",
        "//bazel/third_party:glog",
        "//bazel/third_party:gtest",
        "//bazel/third_party:snappy",
        "//bazel/third_party:lz4",
        "//bazel/third_party:zlib",
        "//bazel/third_party:zstd",
        "//bazel/third_party:bzip2",
        "//bazel/third_party:brpc",
        "//bazel/third_party:protobuf_local",
    ],
    visibility = ["//visibility:public"],
)

# Top-level util library (backward compatibility)
# Other BUILD files should migrate to using :core or :foundation explicitly
cc_library(
    name = "util",
    deps = [
        ":foundation",
        ":core",
    ],
    visibility = ["//visibility:public"],
)

# Arrow utilities (Apache Arrow integration)
cc_library(
    name = "arrow",
    srcs = glob(["arrow/*.cpp"]),
    hdrs = glob(["arrow/*.h"]),
    copts = ["-std=c++17"],
    deps = [
        ":core",  # Updated to use core instead of util
        "//bazel/third_party:arrow",
    ],
    visibility = ["//visibility:public"],
)

# Hash utilities
cc_library(
    name = "hash",
    srcs = glob(["hash/*.cpp"]),
    hdrs = glob(["hash/*.h"]),
    copts = ["-std=c++17"],
    deps = [":core"],  # Updated to use core instead of util
    visibility = ["//visibility:public"],
)

# Debug utilities
cc_library(
    name = "debug",
    hdrs = glob(["debug/*.h"]),
    copts = ["-std=c++17"],
    deps = [":core"],  # Updated to use core instead of util
    visibility = ["//visibility:public"],
)

# Mustache template engine
cc_library(
    name = "mustache",
    srcs = glob(["mustache/*.cpp"]),
    hdrs = glob(["mustache/*.h"]),
    copts = ["-std=c++17"],
    deps = [":core"],  # Updated to use core instead of util
    visibility = ["//visibility:public"],
)

# SIMD optimizations
cc_library(
    name = "simd",
    srcs = glob(["simd/*.cpp"]),
    hdrs = glob(["simd/*.h"]),
    copts = [
        "-std=c++17",
        # Platform-specific SIMD flags will be added via .bazelrc
    ],
    deps = [":core"],  # Updated to use core instead of util
    visibility = ["//visibility:public"],
)
